<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    tools:context="mz.co.txova.msaude.fragment.ScheduleConfirmationFragment">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardUseCompatPadding="true"
        app:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:text="@string/consultation_details"
                android:textAlignment="textEnd"
                android:textColor="#008e26"
                android:textSize="7pt"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Maputo"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_type"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Dermatologia"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clinic"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_clinic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Medclinic"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/doctor"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_doctor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Dr(a). Alima Moiane"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consultation_date"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="19-05-2017"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    android:textColor="#000"
                    android:textSize="7pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/confirmation_consultation_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="12:00 - 12:30"
                    android:textColor="#000"
                    android:textSize="7pt" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/confirmation_consultation_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:text="Marcar"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="9pt"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/confirmation_consultation_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_layout"
            android:text="Cancelar"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="9pt"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>
